--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,7 @@ jobs:
           swift-version: "6.0"
 
       - name: Build Release
-        run: swift build -c release
+        run: swift build -c release -Xswiftc -strict-concurrency=minimal
 
       - name: Import Code Signing Certificate
         id: codesign
